--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   background-color: var(--color-bg);
   color: var(--color-text);
   margin: 0;
-  padding: 1rem;
+  /* padding: 1rem; */
 }
 
 h1, h2, h3 {
