bunch of changes

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,12 +8,10 @@
     padding: 10px;
     // background-color: #363f30;
     // color: white;
-  // .title-container
-  // {
-  //   /* display: flex;
-  //   flex-direction: column; */
-  //   /* gap: 10px; */
-  // }
+  .title-container
+  {
+    margin-left: 10px;
+  }
 }
 
 .explore-page
