added generic DashboardPage + finish boxplots page

--- a/src/pages/Dashboard/LeftPanel.scss
+++ b/src/pages/Dashboard/LeftPanel.scss
@@ -3,7 +3,7 @@
   padding: 1.5rem 1rem;
   background: #f7f7f7;
   border-right: 1px solid #eee;
-  height: calc(vh - 90px);
+  height: calc(100vh - 91px);
   box-sizing: border-box;
 
   .title {
