--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -1,10 +1,13 @@
 .dashboard-layout {
   display: flex;
-  min-height: 100vh;
+  height: calc(100vh - 91px);
+  overflow: hidden;
 }
 
 .dashboard-content {
   flex: 1;
-  padding: 2rem;
+  // padding: 2rem;
   background: #fff;
+  height: calc(100vh - 91px);
+  overflow: scroll;
 }
