--- a/src/pages/Dashboard/DashboardPage.scss
+++ b/src/pages/Dashboard/DashboardPage.scss
@@ -1,7 +1,7 @@
 .dashboard-page {
   display: flex;
   flex-direction: column;
-  padding: 2rem;
+  padding: 3rem;
   box-sizing: border-box;
   // height: calc(100vh - 91px);
   // overflow: hidden;
@@ -24,6 +24,7 @@
       white-space: pre;
       width: 100%;
       text-wrap: wrap;
+      line-height: 22px;
     }
   }
 
